Use the bounding box of all descendants for localVisualRect if there is a mask.

BUG=617785
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2516793002
Cr-Commit-Position: refs/heads/master@{#433443}

Former-commit-id: 3076aa222b62ac770f2c887bc11b7e246fe5b063